--- a/conf/template.properties
+++ b/conf/template.properties
@@ -10,13 +10,14 @@ COIN_NAME=App Token
 COIN_AMOUNT=1000000
 COIN_DESCRIPTION=The App Token description
 COIN_CONDITIONS=There is no condition set up to use this token
-COIN_INIT_SELL_PRICE=1
+COIN_INIT_SELL_PRICE=1000
 
 # Keybase properties (make sure that keybase has your computer added)
 KEYBASE_USER=regorianer
 
 # Test User Account
+# BEWARE: Test User is selling XLM, so amount and buy/bid must be related to xlm!!!!!
 USER_ENABLED=true
-USER_OFFER_AMOUNT=1000
-USER_OFFER_PRICE_BUY=1
-USER_OFFER_PRICE_BID=0.5
+USER_OFFER_SELL_AMOUNT=1000
+USER_OFFER_PRICE_SELL=0.001
+USER_OFFER_PRICE_SOLD=0.001005
