--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,20 @@
 group 'de.danieldeusing.stellar'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+
+task create(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Token Generation Application',
+                'Implementation-Version': version,
+                'Main-Class': 'de.danieldeusing.stellar.tokengen.App'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
 
 repositories {
     mavenCentral()
