--- a/src/main/resources/template.properties
+++ b/src/main/resources/template.properties
@@ -3,6 +3,9 @@ NETWORK=testnet
 
 # App properties
 APP_NAME=app name
+APP_IPFS=true
+APP_TOML=true
+APP_TOML_URL=app-token.com
 
 # Token specific properties
 COIN_CODE=AppToken
@@ -11,6 +14,23 @@ COIN_AMOUNT=1000000
 COIN_DESCRIPTION=The App Token description
 COIN_CONDITIONS=There is no condition set up to use this token
 COIN_INIT_SELL_PRICE=1000
+
+COIN_IMAGEURL=https://itunes.apple.com/us/app/token-app/id1047329819?mt=8
+COIN_SHOWDECIMALS=7
+
+# OPTIONAL:
+#   Define a map which represents the coin distribution
+#   > if there are coins left they will be automatically be added to distribution account
+COIN_DISTRIBUTION.PRESALE=20%
+COIN_DISTRIBUTION.DEVELOPMENT=5%
+COIN_DISTRIBUTION.MARKETING=5%
+COIN_DISTRIBUTION.DISTRIBUTION=50%
+COIN_DISTRIBUTION.AIRDROP=10%
+COIN_DISTRIBUTION.RESERVED=10%
+
+# OPTIONAL
+#   > if true: assumes we do not have any pre-sale and directly want to put our coin on SDEX
+COIN.DIRECT_DISTRIBUTION=false
 
 # Keybase properties (make sure that keybase has your computer added)
 KEYBASE_USER=regorianer
